--- a/app/src/main/res/layout/row_view.xml
+++ b/app/src/main/res/layout/row_view.xml
@@ -2,14 +2,15 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/row_view"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/main_activity_list_row_height">
+    android:layout_height="wrap_content">
 
     <RelativeLayout
         android:id="@+id/containerLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_centerHorizontal="true">
+        android:layout_centerVertical="true"
+        android:layout_margin="8dp">
 
         <TextView
             android:id="@+id/title"
@@ -27,7 +28,7 @@
             android:textSize="@dimen/main_activity_list_row_subtitle_textsize"
             android:layout_alignParentStart="true"
             android:layout_below="@id/title"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="2dp"
             android:textColor="@color/colorPrimary"/>
 
         <TextView
@@ -37,7 +38,7 @@
             android:textSize="@dimen/main_activity_list_row_distance_textsize"
             android:layout_alignParentStart="true"
             android:layout_below="@id/subtitle"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="2dp"
             android:textColor="@color/colorAccent"/>
     </RelativeLayout>
 
@@ -46,6 +47,15 @@
         android:layout_height="wrap_content"
         android:src="@android:drawable/ic_media_play"
         android:layout_alignParentEnd="true"
-        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_margin="8dp"
+        />
+
+    <View
+        android:id="@+id/separator"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/colorPrimary"
+        android:layout_alignParentBottom="true"
         />
 </RelativeLayout>
