DetailActivity and transitions updated

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,4 +14,5 @@
     <dimen name="main_activity_list_row_title_textsize">16sp</dimen>
     <dimen name="main_activity_list_row_subtitle_textsize">14sp</dimen>
     <dimen name="main_activity_list_row_distance_textsize">12sp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
