--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,57 +24,49 @@
         android:orientation="vertical"
         android:background="@color/mainActivity_bottomContainer_bg">
 
-        <android.support.v7.widget.CardView
+        <RelativeLayout
+            android:id="@+id/bottomContainer_header"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:elevation="@dimen/main_activity_cardview_elevation"
-            android:layout_margin="@dimen/main_activity_cardview_margin">
-            <RelativeLayout
+            android:layout_height="@dimen/main_activity_bottom_bar_header_height"
+            android:layout_marginTop="@dimen/main_activity_cardview_margin"
+            android:layout_marginStart="@dimen/main_activity_cardview_margin"
+            android:layout_marginEnd="@dimen/main_activity_cardview_margin">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/main_activity_bottom_bar_header_text"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:textSize="@dimen/main_activity_bottom_bar_header_textsize"
+                android:textStyle="bold"
+                android:textColor="@color/colorPrimaryDark"
+                android:layout_margin="@dimen/main_activity_bottom_bar_header_child_margin"/>
+
+            <ImageView
+                android:layout_width="@dimen/main_activity_bottom_bar_icon_width_height"
+                android:layout_height="@dimen/main_activity_bottom_bar_icon_width_height"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:src="@drawable/showlist"
+                android:layout_margin="@dimen/main_activity_bottom_bar_header_child_margin"/>
+
+            <View
+                android:id="@+id/separator"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="1dp"
+                android:background="@color/colorPrimary"
+                android:layout_alignParentBottom="true"
+                />
+        </RelativeLayout>
 
-                <RelativeLayout
-                    android:id="@+id/bottomContainer_header"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/main_activity_bottom_bar_header_height">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/main_activity_bottom_bar_header_text"
-                        android:layout_alignParentStart="true"
-                        android:layout_centerVertical="true"
-                        android:textSize="@dimen/main_activity_bottom_bar_header_textsize"
-                        android:textColor="@color/colorPrimaryDark"
-                        android:layout_margin="@dimen/main_activity_bottom_bar_header_child_margin"/>
-
-                    <ImageView
-                        android:layout_width="@dimen/main_activity_bottom_bar_icon_width_height"
-                        android:layout_height="@dimen/main_activity_bottom_bar_icon_width_height"
-                        android:layout_alignParentEnd="true"
-                        android:layout_centerVertical="true"
-                        android:src="@drawable/showlist"
-                        android:layout_margin="@dimen/main_activity_bottom_bar_header_child_margin"/>
-
-                    <View
-                        android:id="@+id/separator"
-                        android:layout_width="match_parent"
-                        android:layout_height="2dp"
-                        android:background="@color/colorPrimary"
-                        android:layout_alignParentBottom="true"
-                        />
-                </RelativeLayout>
-
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/recycler_view"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:clipToPadding="false"
-                    android:scrollbars="vertical"
-                    android:layout_below="@id/bottomContainer_header"
-                    />
-            </RelativeLayout>
-        </android.support.v7.widget.CardView>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:clipToPadding="false"
+            android:scrollbars="vertical"
+            />
     </LinearLayout>
 
 </com.sothree.slidinguppanel.SlidingUpPanelLayout>
