--- a/app/src/main/res/layout/row_view.xml
+++ b/app/src/main/res/layout/row_view.xml
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/row_view"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
+    android:layout_height="wrap_content"
+    android:elevation="@dimen/main_activity_cardview_elevation"
+    android:layout_margin="@dimen/main_activity_cardview_margin"
+    android:foreground="?android:attr/selectableItemBackground"
+    android:clickable="true">
     <RelativeLayout
         android:id="@+id/containerLayout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
-        android:layout_margin="8dp">
+        android:layout_margin="8dp"
+        >
 
         <TextView
             android:id="@+id/title"
@@ -19,7 +23,8 @@
             android:textSize="@dimen/main_activity_list_row_title_textsize"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:textColor="@color/colorPrimaryDark"/>
+            android:textColor="@color/colorPrimaryDark"
+            android:textStyle="bold"/>
 
         <TextView
             android:id="@+id/subtitle"
@@ -29,6 +34,9 @@
             android:layout_alignParentStart="true"
             android:layout_below="@id/title"
             android:layout_marginTop="2dp"
+            android:layout_toLeftOf="@id/detail_img"
+            android:singleLine="true"
+            android:ellipsize="end"
             android:textColor="@color/colorPrimary"/>
 
         <TextView
@@ -40,22 +48,15 @@
             android:layout_below="@id/subtitle"
             android:layout_marginTop="2dp"
             android:textColor="@color/colorAccent"/>
+
+        <ImageView
+            android:id="@+id/detail_img"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@android:drawable/ic_media_play"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_margin="8dp"
+            />
     </RelativeLayout>
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@android:drawable/ic_media_play"
-        android:layout_alignParentEnd="true"
-        android:layout_centerVertical="true"
-        android:layout_margin="8dp"
-        />
-
-    <View
-        android:id="@+id/separator"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/colorPrimary"
-        android:layout_alignParentBottom="true"
-        />
-</RelativeLayout>
+</android.support.v7.widget.CardView>
