--- a/app/src/main/res/layout/content_detail.xml
+++ b/app/src/main/res/layout/content_detail.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="8dp"
+    android:layout_margin="@dimen/main_activity_cardview_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="photography.social.com.scenicsydney.ui.detail.DetailActivity"
     tools:showIn="@layout/activity_detail">
@@ -18,7 +18,7 @@
             android:id="@+id/detail_form"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
+            android:layout_margin="@dimen/main_activity_cardview_margin"
             >
 
             <LinearLayout
@@ -33,7 +33,7 @@
                     android:layout_height="wrap_content"
                     android:hint="@string/prompt_location_name"
                     android:inputType="textPersonName"
-                    android:digits="0123456789 qwertzuiopasdfghjklyxcvbnm"
+                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890 ,.-+"
                     android:maxLines="1"
                     android:singleLine="true"
                     />
@@ -54,7 +54,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textMultiLine"
-                    android:digits="0123456789,. qwertzuiopasdfghjklyxcvbnm"
+                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890 ,.-+"
                     android:lines="8"
                     android:minLines="6"
                     android:maxLines="10"
@@ -64,7 +64,5 @@
                     />
             </LinearLayout>
         </ScrollView>
-
     </android.support.v7.widget.CardView>
-
 </android.support.constraint.ConstraintLayout>
