--- a/app/src/main/res/layout/row_view.xml
+++ b/app/src/main/res/layout/row_view.xml
@@ -13,8 +13,7 @@
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
-        android:layout_margin="8dp"
-        >
+        android:layout_margin="@dimen/main_activity_cardview_margin">
 
         <TextView
             android:id="@+id/title"
@@ -56,7 +55,6 @@
             android:src="@android:drawable/ic_media_play"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
-            android:layout_margin="8dp"
-            />
+            android:layout_margin="@dimen/main_activity_cardview_margin" />
     </RelativeLayout>
 </android.support.v7.widget.CardView>
