--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="mainActivity_bottomContainer_bg">#eeeeee</color>
+    <color name="darkGrey">#96909b</color>
 </resources>
